<resources>
    <string name="app_name">Pedometer</string>
    <string name="text">text</string>
    <string name="distance_unit">≒KM</string>
    <string name="minutes_unit">≒MINUTES</string>
    <string name="calories_unit">≒CALORIES</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_update_goal">Update Goal Steps</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_friends">Friends</string>
    <string name="text_privacy_security">Privacy &amp; Security</string>
    <string name="text_help_support">Help And Support</string>
    <string name="text_about">About</string>
    <string name="text_set_notifications">Set Notifications</string>
    <string name="text_notifications_on_off">Notification On/Off</string>
    <string name="text_notifications_repeat_period">Notification Repeat Period</string>
    <string name="text_privacy">Privacy</string>
    <string name="text_security">Security</string>
    <string name="text_language">Language</string>
    <string name="text_current_steps">CurrentSteps</string>
    <string name="text_remain_steps">RemainSteps</string>
    <string name="text_sun">SUN</string>
    <string name="text_mon">MON</string>
    <string name="text_tue">TUE</string>
    <string name="text_wed">WED</string>
    <string name="text_thu">THU</string>
    <string name="text_fri">FRI</string>
    <string name="text_sat">SAT</string>
    <string name="text_today">Today</string>
    <string name="text_bar_chart">BarChart</string>
    <string name="text_goal">goal</string>
    <string name="text_average">Average</string>
    <string name="text_edit_text_fail_validate">please check input text</string>
    <string name="text_label_notifications_period">min</string>
    <string name="text_success_change_noti_repeat_period">text_success_change_noti_repeat_period</string>
    <string name="text_fail_change_noti_repeat_period">text_fail_change_noti_repeat_period</string>
    <string name="text_success_change_noti_onoff">text_success_change_noti_onoff</string>
    <string name="text_home">HOME</string>
    <string name="text_history">HISTORY</string>
    <string name="text_community">COMMUNITY</string>
    <string name="text_setting">SETTING</string>
    <string name="text_community_title_sub">\'s Community</string>
    <string name="text_this_week">This Week</string>
    <string name="text_add_friends">Add Friends</string>
    <string name="text_hint_search_friends">Search Community Id...</string>
    <string name="text_todays">Today\'s</string>
    <string name="text_add">Add</string>
    <string name="text_pending">Pending...</string>
    <string name="text_already">Already</string>
    <string name="text_login">Login</string>
    <string name="text_login_sub">Please sign in to continue.</string>
    <string name="text_hint_id_new">New ID</string>
    <string name="text_hint_id_exist">Existing ID</string>
    <string name="text_hint_password">Password</string>
    <string name="text_new_id">New ID</string>
    <string name="text_exist_id">Exist ID</string>
    <string name="text_logout">Logout</string>
</resources>