<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="showExistId"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_main"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:autoSizeTextType="uniform"
                android:text="@string/text_login"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_title_sub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="@+id/tv_title_sub"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_title_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autoSizeTextType="uniform"
                android:text="@string/text_login_sub"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_main" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_id_new"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginVertical="30dp"
                android:clickable="false"
                android:enabled="false"
                android:hint="@string/text_hint_id_new"
                android:longClickable="false"
                android:visibility="@{!showExistId ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/layout_et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="5dp"
                    android:gravity="center|start" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_id_exist"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:hint="@string/text_hint_id_exist"
                android:visibility="@{showExistId ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/layout_et_id_new"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_et_id_new"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_exist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="5dp"
                    android:gravity="center|start" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:hint="@string/text_hint_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_et_id_exist"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_gray_24"
                    android:drawablePadding="5dp"
                    android:gravity="center|start" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_middle">

            <TextView
                android:id="@+id/tv_new_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:autoSizeTextType="uniform"
                android:text="@string/text_new_id"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/swi_change_id_type"
                app:layout_constraintEnd_toStartOf="@+id/swi_change_id_type"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/swi_change_id_type" />

            <TextView
                android:id="@+id/tv_exist_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autoSizeTextType="uniform"
                android:text="@string/text_exist_id"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/swi_change_id_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/swi_change_id_type"
                app:layout_constraintTop_toTopOf="@+id/swi_change_id_type" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swi_change_id_type"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toStartOf="@+id/tv_exist_id"
                app:layout_constraintStart_toEndOf="@+id/tv_new_id"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@drawable/color_switch_thumb_selector"
                app:trackTint="@drawable/color_switch_track_selector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:autoSizeTextType="uniform"
                android:text="@string/text_login"
                android:textColor="@color/white"
                app:backgroundTint="@color/app_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>