<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toTopOf="@+id/layout_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="JH"
                android:textColor="@color/app_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_title_sub"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/text_community_title_sub"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_title_main"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/material_card_view"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginVertical="20dp"
                app:layout_constraintBottom_toTopOf="@+id/frame_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8"
                app:cardCornerRadius="10dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tab_layout_background"
                    app:tabBackground="@drawable/tab_layout_tab_background"
                    app:tabGravity="fill"
                    app:tabMaxWidth="0dp"
                    app:tabMode="fixed"
                    app:tabIndicator="@null"
                    app:tabTextColor="@color/gray"
                    app:tabSelectedTextColor="@color/black"
                    >

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_friends" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_notifications" />
                </com.google.android.material.tabs.TabLayout>

            </com.google.android.material.card.MaterialCardView>

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_card_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>